--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: #87CEFA;
+  background: #F7F7F7;
 }
 
 #login .container #login-row #login-column #login-box {
