--- a/vistas/css/style_nav.css
+++ b/vistas/css/style_nav.css
@@ -1,5 +1,5 @@
 .navbar-default {
-  background-color: #00CEE2;
+  background-color: #3878d3;
   border-color: #87CEFA;
 }
 .navbar-default .navbar-brand {
