--- a/vistas/css/bootstrap.css
+++ b/vistas/css/bootstrap.css
@@ -3420,7 +3420,7 @@ a.btn-danger {
   background-color: #d9534f;
   border-color: #d43f3a;
   padding: 5px 10px;
-  border: 1px solid transparent;
+  border: 1px transparent;
   border-radius: 4px;
   font-size: 12px;
   word-break: break-word;
