--- a/vistas/css/style_nav.css
+++ b/vistas/css/style_nav.css
@@ -33,11 +33,11 @@
   background-color: red;
 }
 .navbar-default .navbar-toggle {
-  border-color: #1abc9c;
+  border-color: white;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #1abc9c;
+  background-color: black;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #ecf0f1;
