--- a/vistas/css/bootstrap.css
+++ b/vistas/css/bootstrap.css
@@ -3171,8 +3171,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #00ADD5;
-  border-color: #204d74;
+  background-color: #3878d3;
+  border-color: black;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3184,8 +3184,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #fff;
-  background-color: #00ADD5;
-  border-color: #122b40;
+  background-color: #3878d3;
+  border-color: black;
 }
 .btn-primary:active,
 .btn-primary.active,
