--- a/vistas/css/style_nav.css
+++ b/vistas/css/style_nav.css
@@ -59,7 +59,19 @@
 
 
   }
-  .container .content pre {
+  .container .content pre{
+  color: black;
+  border: 0px solid #000;
+  background-color: white;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-break: keep-all;       /* Internet Explorer 5.5+*/
+}
+  .container .content p{
   color: black;
   border: 0px solid #000;
   background-color: white;
